# marketplace-autogen

./: .gcloudignore  .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  README.md  WORKSPACE  cloudbuild.yaml
java/com/google/cloud/deploymentmanager/autogen/: Autogen.java  BUILD.bazel  BatchAutogenApp.java  DisplayDescriptionGenerator.java  SoyDirectives.java  SoyFunctions.java  SpecDefaults.java  SpecValidations.java  autogen.proto  deployment_package_autogen_spec.proto  marketing_info.proto
java/com/google/cloud/deploymentmanager/autogen/cli/: AutogenCli.java  AutogenSettings.java  BUILD.bazel  InputReaderFactory.java  OutputWriterFactory.java
java/com/google/cloud/deploymentmanager/autogen/soy/: BUILD.bazel  Preprocessor.java  README.md  SoyDirectives.java  TemplateRenderer.java
java/com/google/cloud/deploymentmanager/autogen/templates/: display.soy  renders.soy  utilities.soy
java/com/google/cloud/deploymentmanager/autogen/templates/dm/: display.soy  renders.soy  utilities.soy
java/com/google/cloud/deploymentmanager/autogen/templates/dm/multivm/: solution.jinja.display.soy  solution.jinja.schema.soy  solution.jinja.soy  test_config.yaml.soy  tier.jinja.schema.soy  tier.jinja.soy
java/com/google/cloud/deploymentmanager/autogen/templates/dm/singlevm/: c2d_deployment_configuration.json.soy  solution.jinja.display.soy  solution.jinja.schema.soy  solution.jinja.soy  test_config.yaml.soy
java/com/google/cloud/deploymentmanager/autogen/templates/multivm/: c2d_deployment_configuration.json.soy  solution.jinja.display.soy  solution.jinja.schema.soy  solution.jinja.soy  test_config.yaml.soy  tier.jinja.schema.soy  tier.jinja.soy
java/com/google/cloud/deploymentmanager/autogen/templates/sharedsupport/common/: software_status.py  vm_instance.py  vm_instance.py.schema
java/com/google/cloud/deploymentmanager/autogen/templates/singlevm/: c2d_deployment_configuration.json.soy  solution.jinja.display.soy  solution.jinja.schema.soy  solution.jinja.soy  test_config.yaml.soy
java/com/google/cloud/deploymentmanager/autogen/templates/tf/: blocks.soy  constants.soy  metadata_blocks.soy  metadata_display_blocks.soy  util.soy
java/com/google/cloud/deploymentmanager/autogen/templates/tf/multivm/: README.md.soy  main.tf.soy  marketplace_test.tfvars.soy  metadata.display.yaml.soy  metadata.yaml.soy  outputs.tf.soy  tier.main.tf.soy  tier.outputs.tf.soy  tier.variables.tf.soy  variables.tf.soy
java/com/google/cloud/deploymentmanager/autogen/templates/tf/singlevm/: README.md.soy  main.tf.soy  marketplace_test.tfvars.soy  metadata.display.yaml.soy  metadata.yaml.soy  outputs.tf.soy  variables.tf.soy
javatests/com/google/cloud/deploymentmanager/autogen/: AutogenMediumTestsSuite.java  AutogenSmallTestsSuite.java  AutogenTest.java  BUILD.bazel  DisplayDescriptionGeneratorTest.java  SoyDirectivesTest.java  SoyFunctionsTest.java  SpecDefaultsTest.java  SpecValidationsTest.java  VerifyAutogenFileContent.java  VerifySolutionFileSetTest.java
javatests/com/google/cloud/deploymentmanager/autogen/soy/: AutogenSoyTestSuite.java  BUILD.bazel  PreprocessorTest.java  SoyDirectivesTest.java  TemplateRendererTest.java
javatests/com/google/cloud/deploymentmanager/autogen/soy/testdata/: sanity_check.jinja  sanity_check.jinja.soy
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features/: input.prototext  input_deprecated_external_ip.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features/dm/: main_tier.jinja  test_config.yaml  tier2_tier.jinja  tier2_tier.jinja.schema  tier3_tier.jinja  tier3_tier.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features/golden/: jenkins.jinja  jenkins.jinja.display  jenkins.jinja.schema  main_tier.jinja  main_tier.jinja.schema  tier2_tier.jinja  tier2_tier.jinja.schema  tier3_tier.jinja  tier3_tier.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features/tf/: README.md  main.tf  marketplace_test.tfvars  metadata.display.yaml  metadata.yaml  outputs.tf  variables.tf
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features2/: input.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features2/dm/: jenkins.jinja.schema  main_tier.jinja.schema  tier2_tier.jinja  tier2_tier.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features2/golden/: c2d_deployment_configuration.json  jenkins.jinja  jenkins.jinja.schema  main_tier.jinja  main_tier.jinja.schema  test_config.yaml  tier2_tier.jinja  tier2_tier.jinja.schema  tier3_tier.jinja  tier3_tier.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features2/tf/: README.md  main.tf  marketplace_test.tfvars  metadata.display.yaml  metadata.yaml  outputs.tf  variables.tf
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features_with_application_status_spec/: input.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/multivm/full_features_with_application_status_spec/dm/: jenkins.jinja  jenkins.jinja.schema  main_tier.jinja  main_tier.jinja.schema  tier3_tier.jinja  tier3_tier.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/full_features/: input.prototext  input_deprecated_external_ip.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/full_features/dm/: test_config.yaml  wordpress.jinja  wordpress.jinja.display  wordpress.jinja.schema
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/full_features/golden/: test_config.yaml  (+3 more)
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/full_features2/: input.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/full_features_with_application_status_spec/: input.prototext
javatests/com/google/cloud/deploymentmanager/autogen/testdata/singlevm/single_image/: input.prototext  input_deprecated_external_ip.prototext
(+70 files in other folders)
