java_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["*.java"]),
    data = glob(["testdata/**"]),
    deps = [
        "//java/com/google/cloud/deploymentmanager/autogen",
        "//java/com/google/cloud/deploymentmanager/autogen:autogen_java_proto",
        "//java/com/google/cloud/deploymentmanager/autogen:deployment_package_autogen_spec_java_proto",
        "//java/com/google/cloud/deploymentmanager/autogen:marketing_info_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:aopalliance_aopalliance",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_template_soy",
        "@maven//:com_google_truth_extensions_truth_liteproto_extension",
        "@maven//:com_google_truth_extensions_truth_proto_extension",
        "@maven//:com_google_truth_truth",
        "@maven//:com_ibm_icu_icu4j",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_hamcrest_hamcrest_core",
        "@maven//:org_hamcrest_hamcrest_library",
        "@maven//:org_ow2_asm_asm_all",
        "@maven//:org_yaml_snakeyaml",
    ],
)

java_test(
    name = "SmallTests",
    size = "small",
    test_class = "com.google.cloud.deploymentmanager.autogen.AutogenSmallTestsSuite",
    runtime_deps = [":tests"],
)

java_test(
    name = "MediumTests",
    size = "small",
    test_class = "com.google.cloud.deploymentmanager.autogen.AutogenMediumTestsSuite",
    runtime_deps = [":tests"],
)
