package(default_visibility = ["//visibility:public"])

java_library(
    name = "cli",
    srcs = ["AutogenCli.java"],
    deps = [
        "//java/com/google/cloud/deploymentmanager/autogen",
        "//java/com/google/cloud/deploymentmanager/autogen:autogen_java_proto",
        "@aopalliance_aopalliance//jar",
        "@com_google_code_gson//jar",
        "@com_google_common_html_types_types//jar",
        "@com_google_protobuf_protobuf_java//jar",
        "@com_google_protobuf_protobuf_java_util//jar",
        "@com_ibm_icu_icu4j//jar",
        "@commons_cli_commons_cli//jar",
        "@javax_inject//jar",
        "@org_ow2_asm_asm_all//jar",
        "@org_yaml_snakeyaml//jar",
    ],
)

java_binary(
    name = "AutogenCli",
    main_class = "com.google.cloud.deploymentmanager.autogen.cli.AutogenCli",
    runtime_deps = [
        ":cli",
    ],
)
