package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//java:image.bzl", "java_image")

java_library(
    name = "cli",
    srcs = glob(["*.java"]),
    deps = [
        "//java/com/google/cloud/deploymentmanager/autogen",
        "//java/com/google/cloud/deploymentmanager/autogen:autogen_java_proto",
        "@maven//:aopalliance_aopalliance",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:com_ibm_icu_icu4j",
        "@maven//:commons_cli_commons_cli",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_ow2_asm_asm_all",
        "@maven//:org_yaml_snakeyaml",
    ],
)

java_binary(
    name = "AutogenCli",
    main_class = "com.google.cloud.deploymentmanager.autogen.cli.AutogenCli",
    runtime_deps = [
        ":cli",
    ],
)

java_image(
    name = "docker_image",
    main_class = "com.google.cloud.deploymentmanager.autogen.cli.AutogenCli",
    runtime_deps = [":cli"],
)
