java_library(
    name = "soy",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_template_soy",
        "@maven//:org_ow2_asm_asm",
        "@maven//:org_yaml_snakeyaml",
    ],
)
