java_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["*.java"]),
    resources = glob(["testdata/*"]),
    deps = [
        "//java/com/google/cloud/deploymentmanager/autogen/soy",
        "@maven//:aopalliance_aopalliance",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_template_soy",
        "@maven//:com_google_truth_truth",
        "@maven//:com_ibm_icu_icu4j",
        "@maven//:junit_junit",
        "@maven//:org_ow2_asm_asm_all",
    ],
)

java_test(
    name = "test_suite",
    size = "small",
    test_class = "com.google.cloud.deploymentmanager.autogen.soy.AutogenSoyTestSuite",
    runtime_deps = [
        ":tests",
    ],
)
